# lab1_ee106

install/: local_setup.sh  setup.sh
install/ee106s25/lib/ee106s25/: publisher  subscriber
install/ee106s25/share/ee106s25/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/ee106s25/share/ee106s25/msg/: EE106lab_custom_new.msg
log/: latest_build
src/ee106s25/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ee106s25/ee106s25/: publisher.py  subscriber.py
